testsuite/tests/parser/should_fail/pfail003.alan
hello() : proc
 c : int;
{
 (* unknown token *)
 c = $ 4;
}
