testsuite/tests/parser/should_fail/pfail003.stderr
pfail003.alan:5:6: Error: Parse error on input `$'
	Cannot parse char `$'

